fix scrollbar thumb color on macos

--- a/assets/src/css/index.scss
+++ b/assets/src/css/index.scss
@@ -42,6 +42,7 @@ body {
 	line-height: 1.5;
 	margin: 0;
 	padding: 0;
+	min-height: 100%;
 
 	@media (max-width: map-deep($widths, "medium")) {
 		font-size: 17px;
@@ -51,8 +52,9 @@ body {
 	}
 }
 
+// macos chooses scrollbar color based on this. use dark colored pixel image to fool it.
 html {
-	background: map-deep($colors, "brand");
+	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNU+g8AAUkBI5mqlHIAAAAASUVORK5CYII=);
 }
 
 body {
